# skid_iphone_controller

./: (not working)skid_iphone_controller.service  .gitignore  CMakeLists.txt  README.md  config.txt  skid_iphone_controller.service  start_me.config.js
find_which_port/: read_sensors.py
include/node/: colors.h  functions.h  kalman.h  libraries.h
motors_hw130_vel/: motors_hw130_vel.ino
sensors_ir_controller/: sensors_ir_controller.ino
src/: main.cpp
